crates-next/otter-vm/tests/compile_fail/gc_handle_is_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/compile_fail/gc_handle_is_not_send.rs:11:17
   |
11 |     assert_send(handle);
   |     ----------- ^^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Gc<()>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `Gc<()>`
  --> $WORKSPACE/crates-next/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/gc_handle_is_not_send.rs:7:19
   |
 7 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`
